dataset1235/2025-2/2318198438/users/867892000/executions/3334494446_2935826613.log
== RUN (2025-08-28 00:20:01)
-- CODE: 
celsius = int(input(""))
fahrenheit = ((9/5) * celsius) + 32
print(round(fahrenheit,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    celsius = int(input(""))
              ^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '0.0'
-- TEST CASE 2:
---- input:
220.1
---- correct output:
428.18
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    celsius = int(input(""))
              ^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '220.1'
-- TEST CASE 3:
---- input:
40.7
---- correct output:
105.26
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    celsius = int(input(""))
              ^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '40.7'
-- TEST CASE 4:
---- input:
10.2
---- correct output:
50.36
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    celsius = int(input(""))
              ^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '10.2'
-- TEST CASE 5:
---- input:
12.4
---- correct output:
54.32
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    celsius = int(input(""))
              ^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '12.4'
-- TEST CASE 6:
---- input:
40.0
---- correct output:
104.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    celsius = int(input(""))
              ^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '40.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 00:19:48)
-- CODE: 
celsius = int(input(""))
fahrenheit = ((9/5) * celsius) + 32
print(round(fahrenheit,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    celsius = int(input(""))
              ^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '0.0'
-- TEST CASE 2:
---- input:
220.1
---- correct output:
428.18
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    celsius = int(input(""))
              ^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '220.1'
-- TEST CASE 3:
---- input:
40.7
---- correct output:
105.26
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    celsius = int(input(""))
              ^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '40.7'
-- TEST CASE 4:
---- input:
10.2
---- correct output:
50.36
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    celsius = int(input(""))
              ^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '10.2'
-- TEST CASE 5:
---- input:
12.4
---- correct output:
54.32
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    celsius = int(input(""))
              ^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '12.4'
-- TEST CASE 6:
---- input:
40.0
---- correct output:
104.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    celsius = int(input(""))
              ^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '40.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 00:19:01)
-- CODE: 
celsius = (input(""))
fahrenheit = (9/5) * celsius + 32
print(round(fahrenheit,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    fahrenheit = (9/5) * celsius + 32
                 ~~~~~~^~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 2:
---- input:
220.1
---- correct output:
428.18
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    fahrenheit = (9/5) * celsius + 32
                 ~~~~~~^~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 3:
---- input:
40.7
---- correct output:
105.26
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    fahrenheit = (9/5) * celsius + 32
                 ~~~~~~^~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 4:
---- input:
10.2
---- correct output:
50.36
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    fahrenheit = (9/5) * celsius + 32
                 ~~~~~~^~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 5:
---- input:
12.4
---- correct output:
54.32
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    fahrenheit = (9/5) * celsius + 32
                 ~~~~~~^~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 6:
---- input:
40.0
---- correct output:
104.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    fahrenheit = (9/5) * celsius + 32
                 ~~~~~~^~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 00:19:52)
-- CODE: 
celsius = int(input(""))
fahrenheit = ((9/5) * celsius) + 32
print(round(fahrenheit,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    celsius = int(input(""))
              ^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '0.0'
-- TEST CASE 2:
---- input:
220.1
---- correct output:
428.18
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    celsius = int(input(""))
              ^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '220.1'
-- TEST CASE 3:
---- input:
40.7
---- correct output:
105.26
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    celsius = int(input(""))
              ^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '40.7'
-- TEST CASE 4:
---- input:
10.2
---- correct output:
50.36
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    celsius = int(input(""))
              ^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '10.2'
-- TEST CASE 5:
---- input:
12.4
---- correct output:
54.32
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    celsius = int(input(""))
              ^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '12.4'
-- TEST CASE 6:
---- input:
40.0
---- correct output:
104.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    celsius = int(input(""))
              ^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '40.0'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 00:19:21)
-- CODE: 
celsius = (input(""))
fahrenheit = ((9/5) * celsius) + 32
print(round(fahrenheit,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    fahrenheit = ((9/5) * celsius) + 32
                  ~~~~~~^~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 2:
---- input:
220.1
---- correct output:
428.18
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    fahrenheit = ((9/5) * celsius) + 32
                  ~~~~~~^~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 3:
---- input:
40.7
---- correct output:
105.26
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    fahrenheit = ((9/5) * celsius) + 32
                  ~~~~~~^~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 4:
---- input:
10.2
---- correct output:
50.36
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    fahrenheit = ((9/5) * celsius) + 32
                  ~~~~~~^~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 5:
---- input:
12.4
---- correct output:
54.32
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    fahrenheit = ((9/5) * celsius) + 32
                  ~~~~~~^~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 6:
---- input:
40.0
---- correct output:
104.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    fahrenheit = ((9/5) * celsius) + 32
                  ~~~~~~^~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 00:18:51)
-- CODE: 
celsius = (input(""))
fahrenheit = (9/5) * celsius + 32
print(round(fahrenheit,2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
220.1
---- correct output:
428.18
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
40.7
---- correct output:
105.26
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
10.2
---- correct output:
50.36
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
12.4
---- correct output:
54.32
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
40.0
---- correct output:
104.0
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit,2)
         ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 00:19:57)
-- CODE: 
celsius = int(input(""))
fahrenheit = ((9/5) * celsius) + 32
print(round(fahrenheit,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    celsius = int(input(""))
              ^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '0.0'
-- TEST CASE 2:
---- input:
220.1
---- correct output:
428.18
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    celsius = int(input(""))
              ^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '220.1'
-- TEST CASE 3:
---- input:
40.7
---- correct output:
105.26
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    celsius = int(input(""))
              ^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '40.7'
-- TEST CASE 4:
---- input:
10.2
---- correct output:
50.36
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    celsius = int(input(""))
              ^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '10.2'
-- TEST CASE 5:
---- input:
12.4
---- correct output:
54.32
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    celsius = int(input(""))
              ^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '12.4'
-- TEST CASE 6:
---- input:
40.0
---- correct output:
104.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    celsius = int(input(""))
              ^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '40.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 00:20:49)
-- CODE: 
celsius = float(input(""))
fahrenheit = ((9/5) * celsius) + 32
print(round(fahrenheit,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
0.0
---- correct output:
32.0
---- user output:
32.0
-- TEST CASE 2:
---- input:
220.1
---- correct output:
428.18
---- user output:
428.18
-- TEST CASE 3:
---- input:
40.7
---- correct output:
105.26
---- user output:
105.26
-- TEST CASE 4:
---- input:
10.2
---- correct output:
50.36
---- user output:
50.36
-- TEST CASE 5:
---- input:
12.4
---- correct output:
54.32
---- user output:
54.32
-- TEST CASE 6:
---- input:
40.0
---- correct output:
104.0
---- user output:
104.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
